# jellyplex-sync

./: .dockerignore  .gitignore  CHANGELOG.md  DEV.md  Dockerfile  LICENSE  README.md  README_RADARR.md  SPECS.md  escape_test.sh  j2p.py  jellyplex-cron.sh  jellyplex-direct-hook.sh  jellyplex-radarr-hook.sh  jellyplex-sync.sh  pyproject.toml
.forgejo/workflows/: release.yml
.github/workflows/: docker-image.yml  docker-publish.yml  release.yml
src/jellyplex/: __init__.py  jellyfin.py  library.py  plex.py  sync.py  utils.py
src/jellyplex/cli/: sync.py
src/jellyplex_sync/: __init__.py  compare.py  disambig.py  discover.py  jellyfin.py  json_output.py  library.py  materializer.py  model.py  plan.py  planner.py  plex.py  realize.py  sync.py  utils.py
src/jellyplex_sync/cli/: main.py  sync.py
tests/: __init__.py  test_compare.py  test_diff.py  test_disambig.py  test_discover.py  test_e2e_generator.py  test_flat_discover.py  test_jellyfin_movie_naming.py  test_jellyfin_video_naming.py  test_json_output.py  test_materializer.py  test_plan.py  test_plan_function.py  test_planner.py  test_plex_movie_naming.py  test_plex_video_generation.py  test_plex_video_naming.py  test_realize.py  test_renaming_jellyfin_plex.py  test_renaming_plex_jellyfin.py  test_roundtrip.py  test_sync.py  test_sync_pipeline.py  test_utils.py  test_writer_hash_suffix.py
