[project]
name = "jellyplex-sync"
version = "0.1.3"
description = "Convert your media library between Jellyfin and Plex formats by creating a hard-linked mirror"
authors = [{ name = "Stefan Schönberger", email = "mail@sniner.dev" }]
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.scripts]
jellyplex-sync = "jellyplex_sync.cli.sync:main"

[dependency-groups]
dev = ["pytest>=8.3.5,<9"]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
disableBytesTypePromotions = true
