[project]
name = "jellyplex-sync"
version = "0.1.4"
description = "Convert your media library between Jellyfin and Plex formats by creating a hard-linked mirror"
authors = [{ name = "Stefan Schönberger", email = "stefan@sniner.dev" }]
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.scripts]
jellyplex-sync = "jellyplex_sync.cli.sync:main"

[dependency-groups]
dev = ["pytest>=8.3.5,<9"]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 96

[tool.ruff.lint]
ignore = ["E402"]
per-file-ignores = { "__init__.py" = ["F401"] }
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "B",   # flake8-bugbear
]
